# rustc_codegen_c_ospp

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  compile_flags.txt  rust-toolchain.toml  test.sh  y
.github/workflows/: ci.yml
bootstrap/: Cargo.toml
bootstrap/src/: clean.rs  fmt.rs  main.rs  manifest.rs  rustc.rs  test.rs
crates/: Cargo.toml
crates/rustc_codegen_c/: Cargo.toml
crates/rustc_codegen_c/src/: archive.rs  base.rs  builder.rs  context.rs  helper.h  lib.rs  module.rs  utils.rs  write.rs
crates/rustc_codegen_c/src/builder/: abi.rs  alloc.rs  asm.rs  coverage_info.rs  debug_info.rs  expr.rs  intrinsic_call.rs  static.rs
crates/rustc_codegen_c/src/context/: asm.rs  base_type.rs  const.rs  debug_info.rs  layout_type.rs  misc.rs  pre_define.rs  static.rs  type_membership.rs
crates/rustc_codegen_c/src/headers/: checked.h  prelude.h
crates/rustc_codegen_c/src/utils/: sharded_slab.rs  slab.rs
crates/rustc_codegen_c_ast/: Cargo.toml
crates/rustc_codegen_c_ast/src/: arena.rs  decl.rs  expr.rs  func.rs  intern.rs  lib.rs  module.rs  (+3 more)
example/: core_example.rs  example.rs  mini_core.rs  tee.rs
example/tests/: filename.rs
rust_runtime/: rust_runtime.c  rust_runtime.h
src/: base.rs  context.rs  lib.rs  module.rs  util.rs  write.rs
src/builder/: abi.rs  coverage_info.rs  debug_info.rs  intrinsic_call.rs  static.rs
src/context/: base_type.rs  const.rs  misc.rs  pre_define.rs  static.rs  type_membership.rs
tests/: filecheck.rs
tests/codegen/: binary.rs  cond.rs  filename.rs  function_call.rs  params_count.rs  ret_value.rs
