[package]
name = "rustc_codegen_c"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
rustc_codegen_c_ast = { path = "../rustc_codegen_c_ast" }
color-backtrace = { version = "0.6", optional = true }

[features]
default = []
debug = ["color-backtrace"]

# This package uses rustc crates.
[package.metadata.rust-analyzer]
rustc_private = true
